# seds_timeline

./: .gitignore  Cargo.toml  README.md
docs/: schema.md
docs/schema/: timeline_snapshot.schema.json
examples/cli/: Cargo.toml
examples/cli/src/: main.rs
examples/ui-demo/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/ui-demo/public/: sample_bundle.json
examples/ui-demo/src/: ambient.d.ts  main.ts
examples/ui-tests/: package-lock.json  package.json  tsconfig.base.json  types.d.ts
examples/ui-tests/angular/: package.json  tsconfig.json  vitest.setup.ts
examples/ui-tests/angular/src/: bindings.ts  timeline-angular.component.ts
examples/ui-tests/angular/tests/: timeline-angular.component.spec.ts
examples/ui-tests/react/: package.json  tsconfig.json
examples/ui-tests/react/src/: TimelineReact.tsx  bindings.ts
examples/ui-tests/react/tests/: TimelineReact.test.tsx
examples/ui-tests/vue/: package.json  tsconfig.json
examples/ui-tests/vue/src/: TimelineVue.ts  bindings.ts
examples/ui-tests/vue/tests/: TimelineVue.spec.ts
timeline-core/: Cargo.toml
timeline-core/src/: lib.rs
timeline-fhir/: Cargo.toml
timeline-fhir/src/: lib.rs
timeline-fhir/tests/: golden_observation.rs
timeline-fhir/tests/data/: emergency_observation_bundle.json  emergency_observation_expected_snapshot.json  emergency_observation_snapshot.json
timeline-ui/: Cargo.toml
timeline-ui/src/: lib.rs  styles.rs
timeline-wasm/: Cargo.toml
timeline-wasm/src/: lib.rs
timeline-wasm/types/: index.d.ts
