[package]
name = "timeline-ui"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4", features = ["std", "clock"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
timeline-core = { path = "../timeline-core" }
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlInputElement",
    "HtmlElement",
    "Window"
] }
