[package]
name = "timeline-wasm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
timeline-core = { path = "../timeline-core" }
timeline-fhir = { path = "../timeline-fhir" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
